# comprehensive-comparison-of-deep-learning-models-for-lung-and-covid-19-lesion-segmentation-in-ct

./: .gitignore  CITATION  CITATION.bib  LICENSE  Makefile  README  README.md  app.py  datasets.py  hubconf.py  index.html  losses.py  main.ipynb  main.py  ms.bib  ms.tex  package.json  requirements.txt  script.js  utilities.py
.github/: dependabot.yml
.github/workflows/: test-draft-version-document.yml  tests.yml  workflow.yml
.ipynb_checkpoints/: main-checkpoint.ipynb
binder/: main.ipynb  requirements.txt
checks/default/: default.nix
checks/python/: default.nix
demos/: .dockerignore  Dockerfile  Makefile  main.ipynb  main.py  requirements.txt
docs/: Makefile  index.html  lesion-segmentation.json  lung-segmentation.json  main.py  package.json  requirements.txt  script.js  style.css  styles.css
docs/lung-segmentation.FPN.mobilenet_v2.imagenet/: model.json
gooey/: Dockerfile  Makefile  main.py  requirements.txt
gradio/: Makefile  main.py  requirements.txt
jupyter/: requirements.txt
latex/: ms.bib  ms.tex
latex/python/: main.py  pyproject.toml
latex/python/prm/lesion-segmentation-a-FPN-mobilenet_v2-imagenet/: model.json
latex/python/prm/lung-segmentation-FPN-mobilenet_v2-imagenet/: model.json
python/: hubconf.py  main.py  pyproject.toml  requirements.txt
python/release/: lesion-segmentation.json  lung-segmentation.json
python/release/lesion-segmentation-a.FPN.mobilenet_v2.imagenet/: model.json
tfjs/: Makefile  main.py  requirements.txt
wbml/: lesion-segmentation.json  lung-segmentation.json
web-app/: .dockerignore  .gitignore  Dockerfile  Makefile  main.py  requirements.txt
