[project]
name = "UNKNOWN"
version = "0.0.0"
dependencies = [
	"Jinja2==3.1.2",
	"fvcore==0.1.5.post20221221",
	"gdown==4.6.4",
	"matplotlib==3.7.0",
	"nibabel==5.0.1",
	"onnx-tf==1.10.0",
	"pandas==1.5.2",
	"scikit-image==0.20.0",
	"segmentation-models-pytorch==0.3.2",
	"tensorflow-probability==0.19.0",
	"tensorflowjs==4.1.0",
]

[project.optional-dependencies]
dev = [
	"mypy==1.1.1",
	"ruff==0.0.256",
]
