[project]
name = "UNKNOWN"
version = "0.0.0"
dependencies = [
	"Jinja2==3.1.2",
	"fvcore==0.1.5.post20221221",
	"gdown==4.6.4",
	"matplotlib==3.7.0",
	"nibabel==5.0.1",
	"onnx-tf==1.10.0",
	"pandas==1.5.2",
	"scikit-image==0.20.0",
	"segmentation-models-pytorch==0.3.2",
	"tensorflow-probability==0.19.0",
	"tensorflowjs==4.1.0",
]

[project.optional-dependencies]
dev = [
	"mypy==1.1.1",
	"ruff==0.0.259",
]

[tool.mypy]
cache_dir = "bin/check"
ignore_missing_imports = true
install_types = true
non_interactive = true
strict = true

[tool.ruff]
cache-dir = "bin/check/ruff"
fix = true
ignore = ["E501", "S101"]
select = ["A", "ANN", "ARG", "B", "BLE", "C", "C40", "C90", "COM", "DJ", "DTZ", "E", "EM", "ERA", "EXE", "F", "FBT", "G", "I", "ICN", "INP", "ISC", "N", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "Q", "RET", "RSE", "RUF", "S", "SLF", "SIM", "T10", "T20", "TCH", "TID", "TRY", "UP", "YTT", "W"]
