[project]
dependencies = [
  "fvcore==0.1.5.post20221221",
  "gdown==5.1.0",
  "matplotlib==3.8.3",
  "nibabel==5.2.1",
  "onnx==1.16.0",
  "onnxscript==0.1.0.dev20240402",
  "pandas==2.2.1",
  "scikit-image==0.22.0",
  "segmentation-models-pytorch==0.3.3"
]
name = "UNKNOWN"
version = "0.0.0"

[project.optional-dependencies]
dev = [
  "coverage==7.4.4",
  "djlint==1.34.1",
  "mypy==1.9.0",
  "ruff==0.3.4",
  "ssort==0.12.4",
  "toml-sort==0.23.1"
]
