[project]
dependencies = [
  "fvcore==0.1.5.post20221221",
  "gdown==5.2.0",
  "matplotlib==3.9.0",
  "nibabel==5.2.1",
  "onnx==1.16.1",
  "onnxscript==0.1.0.dev20240601",
  "pandas==2.2.2",
  "scikit-image==0.23.2",
  "segmentation-models-pytorch==0.3.3"
]
name = "UNKNOWN"
version = "0.0.0"

[project.optional-dependencies]
dev = [
  "check-python-script@https://api.github.com/repos/pbizopoulos/check-python-script/tarball/d29b3b1#subdirectory=python",
  "coverage==7.5.3",
  "djlint==1.34.1",
  "mypy==1.10.0",
  "ruff==0.4.7",
  "toml-sort==0.23.1"
]
